--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -5,7 +5,10 @@
       "config_update_complete": "iCloud3 configuration updated successfully",
       "already_configured": "iCloud3 is already installed and can not be installed again. \n\nTo configure iCloud3, select the Gear icon (⚙️) or CONFIGURE on the iCloud3 Integration Entries line.\n\nIf you are deleting and then reinstalling, restart HA first and then reinstall iCloud3",
       "disabled": "iCloud3 is DISABLED and can not be installed again. Enable iCloud3, then select CONFIGURE in the iCloud3 Integration entry to configure iCloud3.\n\nIf you are deleting and then reinstalling, restart HA first and then reinstall iCloud3",
-      "login_error": "An error occurred logging into the Apple Account. Verify the username and password.",
+      "login_error": "The Apple account is not log into",
+      "xlogin_error_upw": "Apple account login error - Verify the username and password",
+      "login_error_ipv6": "Apple Account login timeout error, IPv6 is not supported - Go to HA Devices & Settings > System > Network. Disable IPv6 and restart HA.",
+      "login_error_other": "An unknown error occurred logging into the Apple Account.",
       "reauth_successful": "The reauthentication has been successfully completed",
       "verification_code_requested": "A New Apple ID Verification Code was requested",
       "verification_code_accepted": "✅ The Apple ID Verification Code was accepted. Reauthentication is complete",
@@ -85,8 +88,9 @@
       "apple_acct_logged_into": "✅ Logged into the Apple Account",
       "apple_acct_already_logged_into": "Already Logged into the Apple Account",
       "apple_acct_locate_all_reqd": "All devices must be located. Other Family devices are tracked with this Apple Account",
-      "apple_acct_login_error_user_pw": "❌ An error was encountered logging into the Apple Account",
-      "apple_acct_invalid_upw": "❌ Username or Password Validation Error",
+      "xapple_acct_login_error_user_pw": "❌ An error was encountered logging into the Apple Account",
+      "apple_acct_login_error_ipv6": "IPv6 DETECTED > Apple location server does not respond to IPv6 requests → Go to HA Devices & Settings > System > Network > Configure network interfaces. Then disable IPv6 and restart HA.",
+      "apple_acct_invalid_upw": "❌ Invalid Username or Password",
       "apple_acct_login_error_other": "❌ Login Error, Other Error or Apple server is not Available",
       "apple_acct_login_error_503": "🍎 Apple is delaying displaying a new Verification code to prevent Suspicious Activity, probably due to too many requests. It should be displayed in about 20-30 minutes. Restart HA if it is not displayed",
       "apple_acct_login_error_302": "❌ Login Failed, Apple server refused connection (Error 302)",
@@ -96,7 +100,7 @@
       "apple_acct_dup_username_error": "Error: Username is being used by another Data Source entry",
       "apple_acct_username_inuse_error": "Error: This Username is being used by another Data Source entry. This one cannot be changed to it until the other one is removed. Select the other one and STOP USING it first.",
       "apple_acct_not_available": "❌ Login Failed, Apple Account is not Available",
-      "apple_acct_not_logged_into": "The Apple Account(s) are not logged into",
+      "apple_acct_not_logged_into": "The Apple Account is not logged into",
       "apple_acct_updated_not_logged_into": "Apple Acct info was saved, Login Error, Will Complete Login Later",
       "apple_acct_data_source_warning": "Warning: Apple Accts have been set up but are not used as a data source",
       "apple_acct_not_set_up": "No Apple Accts are set up. See `Data Sources > Apple Acct & Mobile App` screen",
@@ -107,7 +111,7 @@
       "password_asp_invalid": "Apple does not support App Specific Passwords in WebAuth applications",
 
       "verification_code_requested": "A New Apple ID Verification Code was requested",
-      "verification_code_needed": "One of the Apple Accounts has requested a Verification Code",
+      "verification_code_needed": "The Apple Account needs to be authenticated",
       "verification_code_accepted": "✅ The Apple Account Verification Code was accepted",
       "verification_code_invalid": "❌ The Verification Code was not correct. Reenter or request a new code",
       "verification_code_send_error": "❌ Failed to send the Apple ID Verification Code",
