--- a/custom_components/icloud3/translations/zh-cn.json
+++ b/custom_components/icloud3/translations/zh-cn.json
@@ -8,7 +8,7 @@
                 "login_error": "登录 Apple 账户时出错。请检查用户名和密码。",
         "reauth_successful": "重新验证完成",
         "verification_code_requested": "已请求新的 Apple ID 双重验证码",
-        "verification_code_accepted": "✅ Apple ID 双重验证码已接受，重新验证完成",
+        "verification_code_accepted": "Apple ID 双重验证码已接受，重新验证完成",
         "verification_code_cancelled": "Apple ID 双重验证已取消",
         "update_cancelled": "更新已取消",
         "icloud3_init_error": "初始化 iCloud3 配置界面时出现问题。iCloud3 可能在启动时出错。请查看 'home-assistant.log' 文件中的 iCloud3 相关错误。",
@@ -78,34 +78,35 @@
       "unknown_action": "无法识别所选操作",
       "not_available": "此操作当前不可用",
       "update_aborted": "更新中止，数据字段中检测到错误",
-      "conf_updated": "✅ iCloud3 配置参数更新成功",
+      "conf_updated": "iCloud3 配置参数更新成功",
       "conf_reloaded": "iCloud3 配置文件已重新加载",
-      "icloud_acct_logging_into": "正在登录 Apple 账户",
-      "icloud_acct_logged_into": "✅ 已登录 Apple 账户",
-      "icloud_acct_already_logged_into": "已经登录 Apple 账户",
-      "icloud_acct_locate_all_reqd": "必须定位所有设备。其他家庭成员设备也通过此 Apple 账户追踪",
-      "icloud_acct_login_error_user_pw": "❌ 无法登录 Apple 账户，用户名或密码错误",
-      "icloud_acct_login_error_other": "❌ 登录错误，其他错误或 iCloud 不可用",
-      "icloud_acct_login_error_503": "🍎 Apple 延迟显示新验证码以防止可疑活动，可能因为请求过多。大约 20-30 分钟后会显示。如果没显示请重启 HA",
-      "icloud_acct_login_error_302": "❌ 登录失败，Apple 服务器拒绝连接（错误 302）",
-      "icloud_acct_login_error_302_cn": "Apple 账户服务器可能在中国但未选择中国",
-      "icloud_acct_login_error_302_usa": "选择了中国但 Apple 服务器位置可能是美国",
-      "icloud_acct_login_error_srp_401": "❌ Python SRP 库凭据错误。创建安全远程密码哈希的 Python 模块计算出错误值。尝试更改密码看能否登录 Apple 账户",
-      "icloud_acct_dup_username_error": "错误：用户名已被另一个数据源条目使用",
-      "icloud_acct_username_inuse_error": "错误：此用户名已被另一个数据源条目使用。必须先移除另一个才能更改。请先选择另一个并停止使用",
-      "icloud_acct_not_available": "❌ 登录失败，Apple 账户不可用",
-      "icloud_acct_not_logged_into": "Apple 账户未登录",
-      "icloud_acct_updated_not_logged_into": "Apple 账户信息已保存，登录错误，稍后完成登录",
-      "icloud_acct_data_source_warning": "警告：已设置 Apple 账户但未用作数据源",
-      "icloud_acct_not_set_up": "未设置 Apple 账户。请查看数据源 > Apple 账户和移动应用界面",
-      "icloud_acct_parm_error": "Apple 账户参数错误。请在数据源 > Apple 账户和移动应用界面更新",
-      "icloud_acct_no_data_source": "❌ 未选择数据源（Apple 账户或移动应用）",
+      "apple_acct_logging_into": "正在登录 Apple 账户",
+      "apple_acct_logged_into": "已登录 Apple 账户",
+      "apple_acct_already_logged_into": "已经登录 Apple 账户",
+      "apple_acct_locate_all_reqd": "必须定位所有设备。其他家庭成员设备也通过此 Apple 账户追踪",
+      "apple_acct_login_error_ipv6": "IPv6 DETECTED > Apple location server does not respond to IPv6 requests → Go to HA Devices & Settings > System > Network > Configure network interfaces. Then disable IPv6 and restart HA.",
+      "apple_acct_invalid_upw": "❌ Invalid Username or Password",
+      "apple_acct_login_error_other": "❌ 登录错误，其他错误或 iCloud 不可用",
+      "apple_acct_login_error_503": "🍎 Apple 延迟显示新验证码以防止可疑活动，可能因为请求过多。大约 20-30 分钟后会显示。如果没显示请重启 HA",
+      "apple_acct_login_error_302": "❌ Login Failed, Apple server refused connection (Error 302)",
+      "apple_acct_login_error_302_cn": "❌ Apple Server Error 302, Should be China but USA was selected",
+      "apple_acct_login_error_302_usa": "❌ Apple Server Error 302, Should be USA but China was selected",
+      "apple_acct_login_error_srp_401": "❌ Python SRP 库凭据错误。创建安全远程密码哈希的 Python 模块计算出错误值。尝试更改密码看能否登录 Apple 账户",
+      "apple_acct_dup_username_error": "错误：用户名已被另一个数据源条目使用",
+      "apple_acct_username_inuse_error": "错误：此用户名已被另一个数据源条目使用。必须先移除另一个才能更改。请先选择另一个并停止使用",
+      "apple_acct_not_available": "❌ 登录失败，Apple 账户不可用",
+      "apple_acct_not_logged_into": "Apple 账户未登录",
+      "apple_acct_updated_not_logged_into": "Apple 账户信息已保存，登录错误，稍后完成登录",
+      "apple_acct_data_source_warning": "警告：已设置 Apple 账户但未用作数据源",
+      "apple_acct_not_set_up": "未设置 Apple 账户。请查看数据源 > Apple 账户和移动应用界面",
+      "apple_acct_parm_error": "Apple 账户参数错误。请在数据源 > Apple 账户和移动应用界面更新",
+      "apple_acct_no_data_source": "❌ 未选择数据源（Apple 账户或移动应用）",
       "ic3_icloud_same_name": "iCloud3 dev_trkr.entity_id 和设备上的名称（设置 > 通用 > 关于）不能完全相同（字母和大小写）",
       "mobile_app_error": "错误，未安装移动应用集成。移动应用不会用作数据源；不会监控位置数据和区域进出触发",
       "password_asp_invalid": "Apple 不支持在 WebAuth 应用中使用应用专用密码",
       "verification_code_requested": "已请求新的 Apple ID 验证码",
       "verification_code_needed": "其中一个 Apple 账户需要验证码",
-      "verification_code_accepted": "✅ Apple 账户验证码已接受",
+      "verification_code_accepted": "Apple 账户验证码已接受",
       "verification_code_invalid": "❌ 验证码不正确。请重新输入或请求新验证码",
       "verification_code_send_error": "❌ 发送 Apple ID 验证码失败",
       "inactive_device": "设备处于非活动状态。改为追踪来定位和追踪此设备",
@@ -372,10 +373,13 @@
         "title": "iCloud3 仪表盘构建器",
         "description": "这个界面可以为被追踪的设备（最多4个）创建和更新 iCloud3 仪表盘，支持不同的风格和视图。仪表盘可以用 HA 工具自定义，也可以直接使用。",
         "data": {
-          "device_desc": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ 仪表盘构建器",
-          "selected_dashboard": "iCloud3 仪表盘",
-          "main_view_devices": "主视图设备 - 新仪表盘主视图要显示的设备",
-          "action_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ 操作命令"
+          "selected_dashboard": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ ICLOUD3 DASHBOARDS",
+          "main_view_style": "MAIN VIEW STYLE FORMAT - How the device information should be presented",
+          "main_view_devices": "MAIN VIEW DEVICES - Devices to display on the Main view screen",
+          "action_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ ACTION COMMANDS"
+        },
+        "data_description": {
+          "selected_dashboard": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ \nCREATE/UPDATE DASHBOARD SPECIFICATIONS - The Style Format & Devices fields below specify how the Dashboard's Main View screen will be constructed when a dashboard is created or updated"
         }
       },
       "tools": {
